# moviedb

./: pyproject.toml
src/moviedb/: __main__.py  application.py  gui.py
src/moviedb/queue/: __init__.py  query.py  queue.py
